css scroll_reveal changes; social media z-index fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -327,6 +327,8 @@ a.highlight-link-bubble {
 	margin-bottom: 40px;
 }
 .social-media {
+	position: relative;
+	z-index: 2;
 	.item {
 		display: inline-block;
 		width: 35px;
