--- a/app/assets/stylesheets/media_types.css.scss
+++ b/app/assets/stylesheets/media_types.css.scss
@@ -9,6 +9,7 @@
 	.portfolio-description {margin-top:30px;}
 	.portfolio-item {padding-top:20px;}
 	.about-box {padding: 30px 80px;}
+	.footer { padding-bottom: 20px; }
 }
 
 /* Medium desktop */
@@ -21,6 +22,7 @@
 	.box-transparent { h2.portfolio {margin-top:1%;} }
 	.box-transparent { h2.contact {margin-top:3%;} }
 	.about-box {padding: 30px 80px;}
+	.footer { padding-bottom: 20px; }
 }
 
 /* Portrait tablet to landscape and desktop */
@@ -62,6 +64,7 @@
 		.my-face { margin-bottom: 20px; }
 		.row-send-message { margin-bottom: 20px; }
 	}
+	.footer { padding-bottom: 20px; }
 }
 
 /* Landscape phone to portrait tablet */
